--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fashion Store</title>
+    <title>Maratha Fashion Store</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <nav>
-        <div class="logo">Fashion Store</div>
+        <div class="logo">Maratha Fashion Store</div>
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Search products...">
             <button id="searchBtn"><i class="fas fa-search"></i></button>
